Fix zoom-buttons z-index

--- a/css/style.css
+++ b/css/style.css
@@ -407,7 +407,7 @@ a {
   position: absolute;
   top: 100px;
   right: 20px;
-  z-index: 1000px;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   gap: 10px;
